<resources>
    <string name="app_name">Ujuzy</string>
    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>My Services</item>
        <item>My Jobs</item>
        <item>Favourites</item>
        <item>Settings</item>
    </string-array>

    <string name="slide_1_title">Q &amp; A PLATFORM</string>
    <string name="slide_1_desc">Erevu, We are a question and answer platform. users gain points when there answers/question get voted up. Remember, users with high points enjoy more privileges on the platform. </string>

    <string name="slide_2_title">INFORMATION SHARING</string>
    <string name="slide_2_desc">Erevu lets you get the satisfaction of helping other people with useful information and exchanging ideas. Remember, the more questions you answer the more votes you are likely to earn</string>

    <string name="slide_3_title">FEEDBACK OPINION</string>
    <string name="slide_3_desc">Erevu discussion forums lets you get more feedback on a specific subject through group chat and push notifications in your inbox when someone answers a question you posted.</string>


    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_service_tabbed">ServiceTabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">0 offer</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="back"><![CDATA[<< Back]]></string>
    <string name="skilled_prof_string">Suitable for individuals / small businesses providing a service Unlimited reviews Unlimited service posts Unlimited service requests Anaylitcs integration Advertising</string>
    <string name="standard_user_txt">Perfect for people looking for service providers Unlimited Support Unlimited reviews Unlimited service requests</string>
    <string name="company_txt">Suitable for large businesses with a considerably sized staff Unlimited reviews Unlimited service posts Umlimited service requests Anaylitcs integration Advertising</string>
</resources>
