<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/content_layout"
    android:orientation="vertical"
    android:visibility="gone">

    <!-- content header line -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:paddingBottom="7dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="7dp">

        <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/categoryTv"
            android:text="---"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <!--<com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="-&#45;&#45;"
            android:id="@+id/costTv"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />-->

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/menu_icon" />

    </RelativeLayout>

    <!-- content header image -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_image" />

        <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
            android:id="@+id/head_image_left_text"
            style="@style/ContentImageBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ujuzyRed"
            android:layout_alignBottom="@id/iv_avatar"
            android:layout_alignLeft="@id/iv_avatar"
            android:layout_alignStart="@id/iv_avatar"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:text="0" />

        <com.ujuzy.ujuzy.ujuzy.CustomData.AllerBoldFont
            style="@style/ContentImageBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/head_image_left_text"
            android:layout_alignLeft="@id/head_image_left_text"
            android:layout_alignStart="@id/head_image_left_text"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:textColor="@color/ujuzyRed"
            android:text="PERSONNEL" />

        <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
            android:id="@+id/head_image_right_text"
            style="@style/ContentImageBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_avatar"
            android:layout_alignEnd="@id/iv_avatar"
            android:layout_alignRight="@id/iv_avatar"
            android:paddingBottom="10dp"
            android:textColor="@color/ujuzyRed"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:text="@string/weight_mock" />

        <com.ujuzy.ujuzy.ujuzy.CustomData.AllerBoldFont
            style="@style/ContentImageBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ujuzyRed"
            android:layout_above="@id/head_image_right_text"
            android:layout_alignLeft="@id/head_image_right_text"
            android:layout_alignStart="@id/head_image_right_text"
            android:text="OFFERS" />

        <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
            android:id="@+id/costTv"
            style="@style/ContentImageBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_avatar"
            android:layout_centerHorizontal="true"
            android:textColor="@color/ujuzyRed"
            android:paddingBottom="10dp"
            android:text="@string/pledge_mock" />

        <com.ujuzy.ujuzy.ujuzy.CustomData.AllerBoldFont
            style="@style/ContentImageBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ujuzyRed"
            android:layout_above="@id/costTv"
            android:layout_alignLeft="@id/costTv"
            android:layout_alignStart="@id/costTv"
            android:text="COST" />


    </RelativeLayout>

    <!-- content body layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgContent"
        android:orientation="vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="9dp">

        <!-- avatar and name part -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
                android:id="@+id/content_avatar_title"
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:text="@string/sender_badge" />

            <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
                android:id="@+id/content_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/content_avatar_title"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar" />

            <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
                android:id="@+id/content_name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/content_avatar"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/content_avatar"
                android:layout_toRightOf="@id/content_avatar"
                android:text="@string/client_name_mock"
                android:textColor="@color/mainTextColor"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/serviceRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/content_name_view"
                android:layout_alignStart="@id/content_name_view"
                android:layout_below="@id/content_name_view"
                android:numStars="5"
                android:stepSize="0.1"
                android:theme="@style/RatingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:isIndicator="true" />

            <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/serviceRating"
                android:layout_marginBottom="-2dp"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/serviceRating"
                android:layout_toRightOf="@id/serviceRating"
                android:text="@string/rating_mock"
                android:visibility="gone"
                android:textColor="@color/contentBadgeTitle"
                android:textSize="11sp" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow" />

        </RelativeLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="9dp"
            android:src="@color/contentDividerLine" />

        <!-- addresses part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
                    android:id="@+id/content_from_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/from_badge" />

                <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
                    android:id="@+id/content_from_address_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/content_from_badge"
                    android:layout_alignStart="@id/content_from_badge"
                    android:layout_below="@id/content_from_badge"
                    android:text="@string/content_from1_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
                    android:id="@+id/content_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/content_from_address_1"
                    android:layout_alignStart="@id/content_from_address_1"
                    android:layout_below="@id/content_from_address_1"
                    android:text="@string/content_from2_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="11sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
                    android:id="@+id/content_to_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="PROVIDER" />

                <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
                    android:id="@+id/provider_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/content_to_badge"
                    android:layout_alignStart="@id/content_to_badge"
                    android:layout_below="@id/content_to_badge"
                    android:text="@string/content_to1_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
                    android:id="@+id/content_to_address_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/provider_name"
                    android:layout_alignStart="@id/provider_name"
                    android:layout_below="@id/provider_name"
                    android:text="@string/content_to2_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="11sp" />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow" />

            </RelativeLayout>

        </LinearLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="7dp"
            android:src="@color/contentDividerLine" />

        <!-- dates part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
                    android:id="@+id/content_delivery_date_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="SERVICE DATE" />

                <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
                    android:id="@+id/content_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_alignLeft="@id/content_delivery_date_badge"
                    android:layout_alignStart="@id/content_delivery_date_badge"
                    android:layout_below="@id/content_delivery_date_badge"
                    android:text="@string/delivery_time_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
                    android:id="@+id/content_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/content_time"
                    android:layout_alignStart="@id/content_time"
                    android:layout_below="@id/content_time"
                    android:text="@string/delivery_date_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="11sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
                    android:id="@+id/content_deadline_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/deadline_badge" />

                <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
                    android:id="@+id/content_deadline_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/content_deadline_badge"
                    android:layout_alignStart="@id/content_deadline_badge"
                    android:layout_below="@id/content_deadline_badge"
                    android:text="@string/deadline_time_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
                    android:id="@+id/content_deadline_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/content_deadline_time"
                    android:layout_alignStart="@id/content_deadline_time"
                    android:layout_below="@id/content_deadline_time"
                    android:text=""
                    android:textColor="@color/mainTextColor"
                    android:textSize="11sp" />
            </RelativeLayout>

        </LinearLayout>

        <!-- request button -->
        <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
            android:id="@+id/review_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/ujuzyRed"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:text="REVIEW"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.ujuzy.ujuzy.ujuzy.CustomData.AllerFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:visibility="gone"
            android:text="@string/btn_annotation_mock"
            android:textAlignment="center"
            android:textColor="@color/contentBadgeTitle"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>